# rag

./: .gitignore  Framework.md  Jour.md  LICENSE.md  PUBLISHING_GUIDE.md  README.md  Roadmap.md  app.py  config.py  docker-compose.yml  initialize_db.py  main.py  new.sh  new2.sh  new3.sh  pyproject.toml  requirements.txt  run_stream.py
.setup/: database_setup.md  github_workflow.md  llm_configuration.md
attached_assets/: Pasted-A-Retrieval-Augmented-Generation-RAG-system-combines-a-large-language-model-LLM-with-an-external-1762740720482_1762740720483.txt
infra/: database.py
services/: document_processor.py  embeddings.py  generator.py  vector_store.py
